Bugfixed: dejo visible el mes y cantidad posts publicados en el perfil de user

--- a/sass-css/_user.scss
+++ b/sass-css/_user.scss
@@ -1,9 +1,7 @@
 #user {
 	#entradas-publicadas {
-		height:120px;
-		&:hover{
-			margin-bottom:50px;
-		}
+		height: 120px;
+		margin-bottom: 50px;
 	}
 
 	.estadisticas {
